--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                     </div>
                 </div>
                 <div class="contact-form">
-                    <form action="#" method="post">
+                    <form action="https://formspree.io/f/mnnzkpzz" method="POST">
                         <div class="input-box">
                             <input type="text" name="name" placeholder="Your Name" required>
                         </div>
