Improve responsive design and add travel website project

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#2ecc71">
+    <meta name="description" content="Abdullah Al Mamun - CSE Student & Web Developer Portfolio">
     <title>Abdullah Al Mamun - Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -49,7 +51,7 @@
                         <a href="https://www.facebook.com/iamfaysal308"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="https://www.instagram.com/?hl=en"><i class="fab fa-instagram"></i></a>
-                        <a href="www.linkedin.com/in/mamun2004"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/in/mamun2004"><i class="fab fa-linkedin-in"></i></a>
                         <a href="https://github.com/captainfaysal"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
@@ -69,7 +71,7 @@
             </div>
             <div class="about-content">
                 <div class="image">
-                    <img src="images/about.jpg" alt="About Abdullah">
+                    <img src="images/presentation.jpg" alt="About Abdullah">
                 </div>
                 <div class="text">
                     <h3>I'm Abdullah Al Mamun</h3>
@@ -241,46 +243,59 @@
             </div>
             <div class="projects-content">
                 <div class="project-box">
-                    <img src="images/project1.jpg" alt="Project 1">
+                    <img src="images/Travel website.jpg.png" alt="Travel Website">
+                    <div class="overlay">
+                        <div class="text">
+                            <h3>Travel Website</h3>
+                            <p>HTML, CSS, JavaScript</p>
+                            <div class="project-links">
+                                <a href="https://travelfaysal.netlify.app/" target="_blank"><i class="fas fa-link"></i></a>
+                                <a href="https://github.com/captainfaysal/Travel-Blog" target="_blank"><i class="fab fa-github"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-box">
+                    <img src="images/website.png" alt="E-commerce Website">
                     <div class="overlay">
                         <div class="text">
                             <h3>E-commerce Website</h3>
                             <p>HTML, CSS, JavaScript</p>
                             <div class="project-links">
-                                <a href="#"><i class="fas fa-link"></i></a>
+                                <a href="https://safwanest.com/"><i class="fas fa-link"></i></a>
                                 <a href="#"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="project-box">
-                    <img src="images/project2.jpg" alt="Project 2">
+                    <img src="images/potfolio.png" alt="Portfolio Website">
                     <div class="overlay">
                         <div class="text">
                             <h3>Portfolio Website</h3>
                             <p>HTML, CSS, JavaScript</p>
                             <div class="project-links">
-                                <a href="#"><i class="fas fa-link"></i></a>
-                                <a href="#"><i class="fab fa-github"></i></a>
+                                <a href="https://faysal-mamun.netlify.app/"><i class="fas fa-link"></i></a>
+                                <a href="https://github.com/captainfaysal/Portfolio"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="project-box">
-                    <img src="images/project3.jpg" alt="Project 3">
+                    <img src="images/blog website.png" alt="Blog Website">
                     <div class="overlay">
                         <div class="text">
                             <h3>Blog Website</h3>
                             <p>HTML, CSS, JavaScript</p>
                             <div class="project-links">
-                                <a href="#"><i class="fas fa-link"></i></a>
-                                <a href="#"><i class="fab fa-github"></i></a>
+                                <a href="https://travelfaysal.netlify.app/"><i class="fas fa-link"></i></a>
+                                <a href="https://github.com/captainfaysal/Travel-Blog"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="project-box">
-                    <img src="images/project4.jpg" alt="Project 4">
+                    <img src="images/weatherapp.jpg" alt="Weather App">
                     <div class="overlay">
                         <div class="text">
                             <h3>Weather App</h3>
@@ -293,23 +308,10 @@
                     </div>
                 </div>
                 <div class="project-box">
-                    <img src="images/project5.jpg" alt="Project 5">
+                    <img src="images/to do list.jpg" alt="To-Do App">
                     <div class="overlay">
                         <div class="text">
                             <h3>To-Do App</h3>
-                            <p>HTML, CSS, JavaScript</p>
-                            <div class="project-links">
-                                <a href="#"><i class="fas fa-link"></i></a>
-                                <a href="#"><i class="fab fa-github"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="project-box">
-                    <img src="images/project6.jpg" alt="Project 6">
-                    <div class="overlay">
-                        <div class="text">
-                            <h3>Calculator App</h3>
                             <p>HTML, CSS, JavaScript</p>
                             <div class="project-links">
                                 <a href="#"><i class="fas fa-link"></i></a>
@@ -381,7 +383,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="copyright">
-                    <p>&copy; 2023 Abdullah Al Mamun. All Rights Reserved.</p>
+                    <p>&copy; 2025 Abdullah Al Mamun. All Rights Reserved.</p>
                 </div>
                 <div class="social">
                     <a href="https://www.facebook.com/iamfaysal308"><i class="fab fa-facebook-f"></i></a>
